fix e2e animated gif on mobile/tablet

--- a/client/src/assets/stylus/views/main-landing.styl
+++ b/client/src/assets/stylus/views/main-landing.styl
@@ -44,6 +44,12 @@ header-height = 400px;
         margin-top: 10px;
         margin-bottom: 10px;
     }
+
+    .e2e-testing img {
+        width:100%;
+        max-width: 1200px;
+    }
+
     img {
         padding-bottom:10px;
     }
